modify email to senior faculty

--- a/phpBB/language/en/email/post_review1.txt
+++ b/phpBB/language/en/email/post_review1.txt
@@ -1,39 +1,17 @@
-Subject: An personal invitation to help junior faculty
+Subject: A personal invitation to help junior faculty.
 
 Dr. {USERNAME},
 
 Dr. Cronstein and I invite you to give feedback to a junior faculty member
-for their proposed specific aims.
+for their proposed specific aims for an upcoming grant application.  You
+received this email because a junior faculty member has identified you
+as an expert in their interest area based on your publication record.
 
-You have received this email because a
-junior faculty member has selected you to provide feedback for your grant
-because of expertise determined from your publication record.
+A followup email will be sent with a few short questions and a link to the proposed aims.
 
-NYU is piloting this feedback system to enhance grant quality.
-
-The system gathers feedback from senior faculty with grant ideas and submissions.
-
-
-Participation is completely optional. The system will record all interactions
-and provides feedback to the administration, senior faculty, and junior faculty.
-
-We record participation and quality of review
-by senior faculty for reporting to the administration.
-This participation will serve as a quantitative measure of teaching and feedback
-for possible future promotion.
-
-We record the senior faculty comments and junior faculty will rate the interaction
-and provide feedback for the quality of the senior faculty's review.
-
-
-At the link below, you will be given a questionnaire to determine whether you
-may provide feedback for this grant proposal.
-
-Please answer the corresponding questions in a follow up email.
-
-You will be required to register on the prototype site. Responding will automatically
-sign you up for the thread and notify you of comments as they are posted.
-
+We greatly value your advice and input in this effort to enhance the grant
+applications of our junior faculty.   It is more important now to provide
+constructive criticism of junior faculty grants than it has ever been.
 
 Thank you for your time and attention.
 
