add alisa and remove second email from automated email

--- a/phpBB/language/en/email/post_review1.txt
+++ b/phpBB/language/en/email/post_review1.txt
@@ -7,8 +7,6 @@ for their proposed specific aims for an upcoming grant application.  You
 received this email because a junior faculty member has identified you
 as an expert in their interest area based on your publication record.
 
-A followup email will be sent with a few short questions and a link to the proposed aims.
-
 We greatly value your advice and input in this effort to enhance the grant
 applications of our junior faculty.   It is more important now to provide
 constructive criticism of junior faculty grants than it has ever been.
@@ -18,4 +16,5 @@ constructive criticism of junior faculty grants than it has ever been.
 Thank you for your time and attention.
 
 Dr. Bruce Cronstein
+Dr. Alisa Surkis
 Dr. Yin Aphinyanaphongs
