show on behalf of Bruce Cronstein

--- a/phpBB/language/en/email/post_review1.txt
+++ b/phpBB/language/en/email/post_review1.txt
@@ -1,4 +1,4 @@
-Subject: A personal invitation to help junior faculty.
+Subject: A personal invitation to help junior faculty - on behalf of Dr. Bruce Cronstein
 
 {USERNAME},
 
