update email message

--- a/phpBB/language/en/email/post_review1.txt
+++ b/phpBB/language/en/email/post_review1.txt
@@ -1,4 +1,4 @@
-Subject: A personal invitation to help junior faculty - on behalf of Dr. Bruce Cronstein
+Subject: Dr. Bruce Cronstein invites you to help a junior faculty member.
 
 {USERNAME},
 
@@ -18,8 +18,7 @@ Please provide:
    - potential collaborators (yourself if applicable)
    - medical center resources that would aid in this research
 
-Your mentoring efforts will strengthen the grant applications of our junior
-faculty.
+By taking these few minutes to mentor a junior faculty member, you are
+providing a valuable service to the medical center.
 
-Thank you for your valuable service to the medical center.
 Dr. Bruce Cronstein
