add thank you to broadcast email

--- a/phpBB/language/en/email/post_review1.txt
+++ b/phpBB/language/en/email/post_review1.txt
@@ -21,4 +21,5 @@ Please provide:
 By taking these few minutes to mentor a junior faculty member, you are
 providing a valuable service to the medical center.
 
+Thank you,
 Dr. Bruce Cronstein
